gcc/testsuite/g++.dg/pch/wchar-1.C
@@ -1,0 +1,1 @@
+#include "wchar-1.H"
